--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
 		in 2000. Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
 		He has also helped set up the Singapore Cyber-security Consortium in 2016. 
-		This was the first industry consortium in Computer Science, with 25 companies in the 
+		This was the first industry consortium in Computer Science in Singapore, with 25 companies in the 
 		cyber-security space engaging with academia for joint research, discussion and collaboration. 
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne and other places). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
