--- a/papers.html
+++ b/papers.html
@@ -7,12 +7,22 @@
 	<font face="Arial" size="4" color="#800000">2023</font></i></b></p>
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Distributed System Fuzzing
-		( <a href="https://arxiv.org/pdf/2305.02601.pdf">PDF</a> )</b></p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CCS]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Greybox Fuzzing of Distributed Systems
+		( <a href="CCS23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, Posted 2023. </p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">30th ACM Conference on Computer and Communications Security (CCS)  2023. </p> 
 
+
+
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 23]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Bleem: Packet Sequence Oriented Fuzzing for Protocol Implementations (<a href="./pdf/sec23.pdf">pdf</a>)
+		</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
+		Zhengxiong Luo, Junze Yu, Feilong Zuo, Jianzhong Liu, Yu Jiang, Ting Chen, Abhik Roychoudhury, Jiaguang Sun</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Usenix Security Symposium 2023. </p> 
+	 
 	<br><p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ESEC-FSE 23] <br>
 	Program Repair Guided by Datalog-Defined Static Analysis (
 	<a href="pdf/FSE23.pdf">PDF</a> )</b><br>
@@ -28,23 +38,6 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Automated Program Repair workshop, ICSE 2023.
 		<font color="#FF0000"><b>Announcement of a new intitative</b></font></p> 
 	 
-	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA23]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Concept-based Automated Grading of CS-1 Programming Assignments
-		( <a href="./pdf/ISSTA23.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Shin Hwei Tan, Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM International Symposium on Software Testing and Analysis (ISSTA) 2023. </p> 
-	 
-	 
-	 
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>HIPPODROME: Data Race Repair using Static Analysis Summaries 
-		( <a href="./pdf/TOSEM23.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Andreea Costea, Abhishek Tiwari, Sigmund Chianasta, Kishore R, Abhik Roychoudhury, Ilya Sergey</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software 
-	Engineering and Methodology (TOSEM), 32(2), March 2023.</p>
-	 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE23]</b></p>
@@ -59,15 +52,22 @@
 		( <a href="./pdf/ICSE23-demo.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ridwan Shariffdeen, Martin Mirchev, Yannic Noller, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE/ACM International Conference on Software Engineering (ICSE) 2023, Tool Demonstrations track. </p> 
+
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>HIPPODROME: Data Race Repair using Static Analysis Summaries 
+		( <a href="./pdf/TOSEM23.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Andreea Costea, Abhishek Tiwari, Sigmund Chianasta, Kishore R, Abhik Roychoudhury, Ilya Sergey</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software 
+	Engineering and Methodology (TOSEM), 32(2), March 2023.</p>
 	 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 23]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Bleem: Packet Sequence Oriented Fuzzing for Protocol Implementations (<a href="./pdf/sec23.pdf">pdf</a>)
-		</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
-		Zhengxiong Luo, Junze Yu, Feilong Zuo, Jianzhong Liu, Yu Jiang, Ting Chen, Abhik Roychoudhury, Jiaguang Sun</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Usenix Security Symposium 2023. </p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA23]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Concept-based Automated Grading of CS-1 Programming Assignments
+		( <a href="./pdf/ISSTA23.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Shin Hwei Tan, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM International Symposium on Software Testing and Analysis (ISSTA) 2023. </p> 
 	 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
