--- a/papers.html
+++ b/papers.html
@@ -9,7 +9,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CCS]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Greybox Fuzzing of Distributed Systems
-		( <a href="CCS23.pdf">PDF</a> )</b></p>
+		( <a href=".pdf/CCS23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">30th ACM Conference on Computer and Communications Security (CCS)  2023. </p> 
 
@@ -17,7 +17,8 @@
 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 23]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Bleem: Packet Sequence Oriented Fuzzing for Protocol Implementations (<a href="./pdf/sec23.pdf">pdf</a>)
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Bleem: Packet Sequence Oriented Fuzzing for Protocol Implementations 
+		(<a href="./pdf/sec23.pdf">PDF</a>)
 		</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
 		Zhengxiong Luo, Junze Yu, Feilong Zuo, Jianzhong Liu, Yu Jiang, Ting Chen, Abhik Roychoudhury, Jiaguang Sun</p>
