--- a/papers.html
+++ b/papers.html
@@ -9,7 +9,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CCS]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Greybox Fuzzing of Distributed Systems
-		( <a href=".pdf/CCS23.pdf">PDF</a> )</b></p>
+		( <a href="./pdf/CCS23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">30th ACM Conference on Computer and Communications Security (CCS)  2023. </p> 
 
