--- a/papers.html
+++ b/papers.html
@@ -7,7 +7,7 @@
 	<font face="Arial" size="4" color="#800000">2023</font></i></b></p>
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CCS]</b></p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[CCS23]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Greybox Fuzzing of Distributed Systems
 		( <a href="./pdf/CCS23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
