--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
 
 <ul>
 <li><font face="Arial">
-	<a href ="https://nus-tss.github.io">Trustworthy and Secure Software (TSS)@NUS</a> Group</font></li>
+	<a href ="https://nus-tss.github.io">[Trustworthy and Secure Software (TSS)@NUS</a> Group]</font></li>
 	<li> <font face="Arial"><a href="select-pubs.html">[Selected Papers]</a></font></li>
 	<li><font face="Arial"><a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">
 	[Google Scholar]</a></font></li>
+	<li> <font face="Arial"><a href="papers.html">[All Papers]</a></font></li>
 	</ul>
 	 	
 <hr>   	
