--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<li>
 		<font face="Arial">
 			Work on program repair receives International Conference on Software Engineering 
-		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html"> 
+		 <a href = "https://www-old.sigsoft.org/awards/icseMIPAward.html">
 			Most Influential Paper Award</a> for ICSE13 paper <a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a>. 
 			<ul>
 				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
