--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</blockquote>       </DIV></TD>      		 	
 	<TD width="266" bgcolor="#FFFFFF">        		<p align="center"> 	  		 &nbsp;</p>
 	<p align="center"> 	 		 	
-	<img border="0" src="abhik-pictures/s-light.jpg" width="241" height="231"></p> 			<p align="center"> 	 		&nbsp;</p></TD>   </TR></TBODY></TABLE>     	
+	<img border="0" src="abhik-pictures/2023.jpg" width="252" height="231"></p> 			<p align="center"> 	 		&nbsp;</p></TD>   </TR></TBODY></TABLE>     	
 	<p align="center">&nbsp;</p>
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
