--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
 </li>
 <br>
 <li><p><font face="Arial">
-[<a href="https://youtu.be/Msr77fg1uhE"><b>VIDEO</b></a>] (Part of) a talk given for PhD students at National University of Singapore PhD open Day, October 2020. <br> Similar talk was given at Doctoral Sympoium of various conferences, including ISSTA 2019.</p>
+[<a href="https://youtu.be/Msr77fg1uhE"><b>VIDEO</b></a>] (Part of) a talk given for PhD students at 
+	National University of Singapore PhD open Day. <br> 
+	Similar talk was given at Doctoral Sympoium of various conferences.</p>
 
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/aVoYio0BHelIVU" width="500" height="407" frameborder="0" marginwidth="0"
 	marginheight="0" 
@@ -174,8 +176,8 @@
 <br>
 
 <li><p><font face="Arial">
-Distinguished Lecture at Max-Planck Institute for Software Systems (July 2019) 
-and KAIST (June 2020).  <br> Similar talks were given at other venues.
+Distinguished Lecture at Max-Planck Institute for Software Systems, 
+and KAIST.  <br> Similar talks were given at other venues.
 
 </p>
 
