--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		cyber-security space engaging with academia for joint research, discussion and collaboration. 
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne and other places). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
-		for contributions to symbolic execution, as well as with an ICSE Most Influentual Paper Award 
+		for contributions to symbolic execution, as well as with an International Conference on Software Engineering (ICSE) Most Influential Paper Award 
 		for an ICSE 2013 paper suggesting semantic approaches towards program repair. </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
