--- a/papers.html
+++ b/papers.html
@@ -2,6 +2,19 @@
 	<H2><font face="Arial" color="#800000" size="4">Journals / Conferences </font></H2>    <hr>    
 
 
+        <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
+	<font face="Arial" size="4" color="#800000">2024</font></i></b></p>
+
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[NDSS24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Large Language Model guided Protocol Fuzzing
+		( <a href="./pdf/NDSS24.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Martin Mirchev, Marcel Böhme, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">31st Annual Network and Distributed System Security Symposium (NDSS) 2024. </p> 
+
+ <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
+	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2023</font></i></b></p>
