--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 		<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27). 
 		</p>
-		
+
+		<li>
+		Co-chairing <a href ="https://conf.researchr.org/track/icse-2024/icse-2024-research-track">
+		International Conference on Software Engineering (ICSE) 2024</a> 
+		<ul>
+		<li>Look forward to seeing the entire community in Lisbon, April 2024 !</li>
+		</ul>
+		</li>	
 			
 			</font></p>
 	</ul>
