--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</p><br>
 
 		<li>
-		Co-chairing <a href ="https://conf.researchr.org/track/icse-2024/icse-2024-research-track">
+		Co-chairing <a href ="https://conf.researchr.org/track/icse-2024/icse-2024-research-track#Call-for-papers">
 		International Conference on Software Engineering (ICSE) 2024</a> 
 		<ul>
 		<li>Look forward to seeing the entire community in Lisbon, April 2024.</li>
