--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
-			<br><br><u>Admin contact</u>:
+			<br><br><u>Admin Manager</u>:
 			<br> Neo Chee Yong
 			<br><i>neocy at nus.edu.sg</i>	
 		</span></font></H3>            			
