--- a/index.html
+++ b/index.html
@@ -68,16 +68,12 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
-		<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27). 
+		<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27) in progress.
 		</p><br>
 
 		<li>
 		Co-chairing <a href ="https://conf.researchr.org/track/icse-2024/icse-2024-research-track#Call-for-papers">
-		International Conference on Software Engineering (ICSE) 2024</a> 
-		<ul>
-		<li>Look forward to this community meeting in Lisbon, April 2024.</li>
-		</ul>
-		</li>	
+		Intl. Conf. on Software Engineering (ICSE) 24</a>, see you in Lisbon.
 			
 			</font></p>
 	</ul>
