--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
-	        Fuzz testing </a> (2023-27) launched under National Research Foundation Cybersecurity Research. </p>
+	        Fuzz testing </a> (2023-27) launched under National Research Foundation (NRF) and Cybersecurity Agency (CSA). </p>
 			<br>
 		
 	
