--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 		<li>
 		Co-chairing <a href ="https://conf.researchr.org/track/icse-2024/icse-2024-research-track#Call-for-papers">
-		Intl. Conf. on Software Engineering (ICSE) 24</a>, see you in Lisbon.
+		Intl. Conf. on Software Engineering (ICSE) 24</a>, see you all in Lisbon!
 			
 			</font></p>
 	</ul>
