--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
+	<b><font face="Arial" size="4" color="#800080">Newsflash</font></b></p>
 	<ul>
 
 		<li>
