--- a/papers.html
+++ b/papers.html
@@ -10,7 +10,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Intelligent Tutoring System: Experience of Linking Software
 Engineering and Programming Teaching
-		( <a href="./pdf/its_arxiv.pdf">PDF</a> )</b></p>
+		( <a href="https://arxiv.org/abs/2310.05472">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, 2310.05472, Publicly released 9th October 2023. </p> 
 	 
