--- a/papers.html
+++ b/papers.html
@@ -6,14 +6,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2024</font></i></b></p>
 
-<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Intelligent Tutoring System: Experience of Linking Software
-Engineering and Programming Teaching
-		( <a href="https://arxiv.org/abs/2310.05472">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, 2310.05472, Publicly released 9th October 2023. </p> 
-	 
+
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[NDSS24]</b></p>
@@ -52,6 +45,15 @@ Engineering and Programming Teaching
 	Yu Liu, Sergey Mechtaev, Pavle Subotic, Abhik Roychoudhury <br>
 	ACM Joint European Software Engineering Conference and Symposium on the 
 	Foundations of Software Engineering (ESEC/FSE)&nbsp;2023.</p>
+
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Intelligent Tutoring System: Experience of Linking Software
+Engineering and Programming Teaching
+		( <a href="https://arxiv.org/abs/2310.05472">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, 2310.05472, Publicly released October 2023. </p> 
+	 
 	 
 	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR23]</b></p>
