--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		<li>
 		<font face="Arial">
-			Work on program repair receives International Conference on Software Engineering 
+			Program repair work received International Conference on Software Engineering 
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html">
 			Most Influential Paper Award</a> for ICSE13 paper
 			<a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a> (see <a href="https://www.youtube.com/watch?v=v9EQolTQwlg">Video</a>)
