--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	&nbsp;</p>
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<font face="Arial"> Abhik Roychoudhury is a Professor of Computer Science at the National University of Singapore, 
+	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore, 
 		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
 		in 2000. Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
 		He has also helped set up the Singapore Cyber-security Consortium in 2016. 
@@ -99,7 +99,8 @@
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne and other places). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
 		for contributions to symbolic execution, as well as with an International Conference on Software Engineering (ICSE) Most Influential Paper Award 
-		for an ICSE 2013 paper suggesting semantic approaches towards program repair. </font></p>
+		for an ICSE 2013 paper suggesting semantic approaches towards program repair. His research group is known for contributions to program repair, 
+		fuzzing and symbolic execution. </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
