--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
 		</font>
 			
 		<br><li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
 		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
-	        Fuzz testing </a> (2023-27) launched under National Research Foundation (NRF) and Cybersecurity Agency (CSA). </p>
+	        Fuzz testing </a> (2023-27) launched under National Research Foundation (NRF) and Cybersecurity Agency (CSA). 
+			<ul>
+			<li> <a href= "https://fuzzing.comp.nus.edu.sg/">Summer School on Fuzzing and Software Security</a>, 
+				May 2024, please apply if interested.</li>
+			</ul>
 			<br>
 		
 	
