--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<br><li>
 		<font face="Arial">
 		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
-	        Fuzz testing </a> (2023-27) launched under National Research Foundation (NRF) and Cybersecurity Agency (CSA). 
+	        Fuzz testing </a> (2023-27) launched under Cybersecurity Agency (CSA).
 			<ul>
 			<li> <a href= "https://fuzzing.comp.nus.edu.sg/">Summer School on Fuzzing and Software Security</a>, 
 				May 2024, please apply if interested.</li>
