--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
 	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore, 
 		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
 		in 2000. Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
-		He has also helped set up the Singapore Cyber-security Consortium in 2016. 
-		This was the first industry consortium in Computer Science in Singapore, with 25 companies in the 
-		cyber-security space engaging with academia for joint research, discussion and collaboration. 
-		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
-		University of Melbourne and other places). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
+		He has chaired the major conferences in software engineering including Program co-chair of ICSE24, General Chair of FSE 2022, and Program
+		chair of ISSTA 2016. His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
 		for contributions to symbolic execution, as well as with an International Conference on Software Engineering (ICSE) Most Influential Paper Award 
-		for an ICSE 2013 paper suggesting semantic approaches towards program repair. His research group is known for contributions to program repair, 
+		for an ICSE 2013 paper suggesting semantic approaches towards program repair.  His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
+		University of Melbourne and other places). His research group is known for contributions to program repair, 
 		fuzzing and symbolic execution. </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
