--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		for contributions to symbolic execution, as well as with an International Conference on Software Engineering (ICSE) Most Influential Paper Award 
 		for an ICSE 2013 paper suggesting semantic approaches towards program repair.  His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne and other places). He has chaired the major conferences in software engineering as Program co-chair of ICSE 2024, General Chair of FSE 2022 in Singapore, and Program
-		chair of ISSTA 2016. His research group is known for contributions to program repair, fuzzing and symbolic execution. </font></p>
+		chair of ISSTA 2016. His research group is known for contributions to automatic programming, program repair, fuzzing and symbolic execution. </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
