--- a/papers.html
+++ b/papers.html
@@ -14,6 +14,14 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 29th ACM International Conference on Architectural Support for 
 		Programming Languages and Operating Systems (ASPLOS) 2024. </p> 
 
+	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICST24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Evolutionary Testing for Program Repair
+		( PDF )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Haifeng Ruan, Hoang Lam Nguyen, Ridwan Shariffdeen, Yannic Noller, Abhik Roychoudhury </p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 17th IEEE International Conference on Software Testing, Verification and Validation (ICST) 2024. </p> 
+
+
 
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
