--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
-
+		<li>
+		<font face="Arial">
+                <a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting </a> (Jan 25) and 
+		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagtsuhl seminar</a> (Oct 24) 
+			on automatic programming.
 		<li>
 		<font face="Arial">
 			Program repair work received International Conference on Software Engineering 
