--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<font face="Arial">
                 <a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting </a> (Jan 25) and 
 		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagtsuhl seminar</a> (Oct 24) 
-			on automatic programming.
+			on automatic programming.</font>
 		<li>
 		<font face="Arial">
 			Program repair work received International Conference on Software Engineering 
