--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 	<ul>
 		<li>
 		<font face="Arial">
-                <a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting </a> (Jan 25) and 
-		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagtsuhl seminar</a> (Oct 24) 
-			on automatic programming.</font>
-		<li>
+                <a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting on Trusted Automatic Programming </a> (Jan 25) and 
+		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> (Oct 24) 
+			on related topics  - to bring community together.</font>
+		<br><li>
 		<font face="Arial">
 			Program repair work received International Conference on Software Engineering 
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html">
