--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
 		<li>
-		<font face="Arial">
+		<p style="margin-top: 0; margin-bottom: 0" align="left"><font face="Arial">
                 <a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting on Trusted Automatic Programming </a> (Jan 25) and 
 		<a href="https://www.dagstuhl.de/en/seminars/seminar-calendar/seminar-details/24431">Dagstuhl seminar</a> (Oct 24) 
 			on related topics  - to bring community together.</font>
-		<br><li>
+		</p><br>
+		<li>
 		<font face="Arial">
 			Program repair work received International Conference on Software Engineering 
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html">
