--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 		
 			<li>
 		<font face="Arial">
-			Program repair work received International Conference on Software Engineering 
+			Intl. Conf. on Software Engineering (ICSE)
 		 <a href = "https://www.sigsoft.org/awards/icseMIPAward.html">
-			Most Influential Paper Award</a> for ICSE13 paper
+			Most Influential Paper Award</a> 2023 for ICSE13 paper
 			<a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a> (see <a href="https://www.youtube.com/watch?v=v9EQolTQwlg">Video</a>)
 			<ul>
 				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
