--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			Most Influential Paper Award</a> 2023 for ICSE13 paper
 			<a href="https://abhikrc.com/pdf/ICSE13-SEMFIX.pdf">SemFix</a> (see <a href="https://www.youtube.com/watch?v=v9EQolTQwlg">Video</a>)
 			<ul>
-				<li>Honored to also receive IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
+				<li>IEEE TCSE New Directions Award 2022 for contributions to symbolic execution (jointly with Cristian Cadar).</li>
 			</ul>
 		</font>
 			
