--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
 		in 2000. Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
 		 His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
-		for contributions to symbolic execution, as well as with an International Conference on Software Engineering (ICSE) Most Influential Paper Award 
+		for contributions to symbolic execution, as well as with International Conference on Software Engineering (ICSE) 2023 Most Influential Paper Award 
 		for an ICSE 2013 paper suggesting semantic approaches towards program repair.  His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne and other places). He has chaired the major conferences in software engineering as Program co-chair of ICSE 2024, General Chair of FSE 2022 in Singapore, and Program
 		chair of ISSTA 2016. His research group is known for contributions to automatic programming, program repair, fuzzing and symbolic execution. </font></p>
