--- a/papers.html
+++ b/papers.html
@@ -6,6 +6,24 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2024</font></i></b></p>
 
+         <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICST24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Evolutionary Testing for Program Repair
+		( PDF )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Haifeng Ruan, Hoang Lam Nguyen, Ridwan Shariffdeen, Yannic Noller, Abhik Roychoudhury </p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 17th IEEE International Conference on Software Testing, Verification and Validation (ICST) 2024. </p> 
+
+
+	 
+	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[SEET@ICSE24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Software Engineering Educational Experience in Building an 
+		Intelligent Tutoring System (<a href="https://arxiv.org/abs/2310.05472"> arxiv link </a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 46th IEEE/ACM International Conference on Software Engineering: 
+		Software Engineering Education and Training Track, SEET@ICSE 2024. </p> 
+
+
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Greybox Fuzzing for Concurrency Testing
@@ -14,16 +32,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 29th ACM International Conference on Architectural Support for 
 		Programming Languages and Operating Systems (ASPLOS) 2024. </p> 
 
-	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICST24]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Evolutionary Testing for Program Repair
-		( PDF )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Haifeng Ruan, Hoang Lam Nguyen, Ridwan Shariffdeen, Yannic Noller, Abhik Roychoudhury </p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 17th IEEE International Conference on Software Testing, Verification and Validation (ICST) 2024. </p> 
-
-
-
-
+	  
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[NDSS24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Large Language Model guided Protocol Fuzzing
@@ -31,7 +40,8 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Martin Mirchev, Marcel Böhme, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">31st Annual Network and Distributed System Security Symposium (NDSS) 2024. </p> 
 
- <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
+ 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
@@ -43,8 +53,6 @@
 		( <a href="./pdf/CCS23.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, George Pirlea, Abhik Roychoudhury, Ilya Sergey</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">30th ACM Conference on Computer and Communications Security (CCS)  2023. </p> 
-
-
 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 23]</b></p>
@@ -62,14 +70,6 @@
 	ACM Joint European Software Engineering Conference and Symposium on the 
 	Foundations of Software Engineering (ESEC/FSE)&nbsp;2023.</p>
 
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Intelligent Tutoring System: Experience of Linking Software
-Engineering and Programming Teaching
-		( <a href="https://arxiv.org/abs/2310.05472">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv, 2310.05472, Publicly released October 2023. </p> 
-	 
 	 
 	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR23]</b></p>
