--- a/papers.html
+++ b/papers.html
@@ -27,7 +27,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASPLOS24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Greybox Fuzzing for Concurrency Testing
-		( PDF )</b></p>
+		( <a href="./pdf/ASPLOS24.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Dylan Wolff, Shi Zheng, Gregory Duck, Umang Mathur, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 29th ACM International Conference on Architectural Support for 
 		Programming Languages and Operating Systems (ASPLOS) 2024. </p> 
