--- a/papers.html
+++ b/papers.html
@@ -18,7 +18,7 @@
 	  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[SEET@ICSE24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Software Engineering Educational Experience in Building an 
-		Intelligent Tutoring System (<a href="https://arxiv.org/abs/2310.05472"> arxiv link </a>)</b></p>
+		Intelligent Tutoring System (<a href= "./pdf/ICSE-Edu-24"> PDF </a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Yannic Noller, Ashish Dandekar, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> 46th IEEE/ACM International Conference on Software Engineering: 
 		Software Engineering Education and Training Track, SEET@ICSE 2024. </p> 
