--- a/index.html
+++ b/index.html
@@ -105,14 +105,12 @@
 	&nbsp;</p>
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore, 
-		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
-		in 2000. Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
-		 His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
-		for contributions to symbolic execution, as well as with International Conference on Software Engineering (ICSE) 2023 Most Influential Paper Award 
-		for an ICSE 2013 paper suggesting semantic approaches towards program repair.  His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
-		University of Melbourne and other places). He has chaired the major conferences in software engineering as Program co-chair of ICSE 2024, General Chair of FSE 2022 in Singapore, and Program
-		chair of ISSTA 2016. His research group is known for contributions to automatic programming, program repair, fuzzing and symbolic execution. </font></p>
+	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore. 
+		Abhik's research interests are in software testing and analysis, software security and trust-worthy software construction. 
+		His research group is known for contributions to automatic programming, program repair, fuzzing and symbolic execution, which has been 
+		honored with various awards including an ICSE Most Influential Paper (Test-of-time) Award for program repair. Past doctoral students from 
+		the research team have been placed all over the world as academics, including Peking U., UCL, MPI, UniMelb, Concordia and other places.
+		Abhik received his PhD from State University of New York at Stony Brook in 2000. 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
