--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore. 
-		Abhik's research interests are in software testing and analysis, software security and trust-worthy software construction. 
+		His research interests are in software testing and analysis, software security and trust-worthy software construction. 
 		His research group is known for contributions to automatic programming, program repair, fuzzing and symbolic execution, which has been 
-		honored with various awards including an ICSE Most Influential Paper (Test-of-time) Award for program repair. Past doctoral students from 
-		the research team have been placed all over the world as academics, including Peking U., UCL, MPI, UniMelb, Concordia and other places.
+		honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
+		the research team have been placed all over the world as academics, including Peking U., UCL, MPI, UniMelb, Concordia and other places. Abhik has served the 
+		software engineering research community in various capacities including as chair of the major conferences of the field, ICSE and FSE.
 		Abhik received his PhD from State University of New York at Stony Brook in 2000. 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
