--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore,
-		where he has led a research team in trustworthy software systems since 2001. His research group is known for contributions to automatic programming, program repair, fuzzing and symbolic execution, which has been 
+		where he has led a research team focusing on trustworthy software systems since 2001. His research group is known for contributions to automatic programming, program repair, fuzzing and symbolic execution, which has been 
 		honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
 		the research team have been placed all over the world as academics, including Peking U., UCL, MPI, UniMelb, Concordia and other places. He has served the 
 		software engineering research community in various capacities including as chair of the major conferences of the field, ICSE and FSE.
