--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>
 		
-	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at the National University of Singapore,
+	<p style="margin-top: 0; margin-bottom: 0" align="left"> 9
+	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at the National University of Singapore (NUS),
 		where he has led a research team on trustworthy software systems (TSS) since 2001. His research group is known for contributions to automatic programming, fuzzing and symbolic execution, which have been 
 		honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
-		the research team have been placed all over the world as academics, including UCL, Max Plack Inst., Peking U., UniMelb, Concordia and other places. He has served the 
+		the research team have been placed all over the world as academics, including UCL, Max Planck Inst., Peking U., UniMelb, Concordia and other places. He has served the 
 		software engineering research community in various capacities including as chair of the major conferences of the field, ICSE and FSE.
 		Abhik received his PhD from State University of New York at Stony Brook in 2000. 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
