--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at the National University of Singapore (NUS),
-		where he leads a research team on Trustworthy and Secure Software (TSS). His interests are in software testing, program analysis and software security.
+		where he leads a research team on <a  href = "https://nus-tss.github.io/">
+	        Trustworthy and Secure Software (TSS)</a>. His interests are in software testing, program analysis and software security.
 		His research group is known for contributions to automatic programming, fuzzing and symbolic execution, which have been 
 		honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
 		the research team have been placed in various institutions as academics including UCL, Max Planck Inst., Peking U., UniMelb and Concordia U. He has served the 
