--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	        Trustworthy and Secure Software (TSS)</a>. His interests are in software testing, program analysis and software security.
 		His research group is known for contributions to automatic programming, fuzzing and symbolic execution, which have been 
 		honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
-		the research team have been placed in various institutions as academics including UCL, Max Planck Inst., Peking U., UniMelb and Concordia U. He has served the 
+		the research team have been placed in various institutions as academics including UCL, Max Planck Inst., UniMelb and Concordia U. He has served the 
 		software engineering research community in various capacities including as chair of the major conferences of the field, ICSE and FSE.
 		Abhik received his PhD from State University of New York at Stony Brook in 2000. 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
