--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 		His research group is known for contributions to automatic programming, fuzzing and symbolic execution, which have been 
 		honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
 		the research team have been placed in various institutions as academics including UCL, Max Planck Inst., UniMelb and Concordia U. He has served the 
-		software engineering research community in various capacities including as chair of the major conferences of the field, ICSE and FSE.
-		Abhik received his PhD from State University of New York at Stony Brook in 2000. 
+		software engineering research community in various capacities including as chair of the major conferences of the field, ICSE and FSE. Currently, he serves as
+		the chair of the steering committee of FSE. Abhik received his PhD from State University of New York at Stony Brook in 2000. 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
