--- a/papers.html
+++ b/papers.html
@@ -6,7 +6,15 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2024</font></i></b></p>
 
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR24]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> APR Competition 2024
+		( <a href="./pdf/APRCOMP.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ridwan Shariffdeen, Yannic Noller, Martin Mirchev, Haifeng Ruan
+Xiang Gao, Andreea Costea, Gregory J Duck, Abhik Roychoudhury
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> International Workshop on Automated Program Repair (APR) 2024. </p> 
 
+	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[FSE24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> ProveNFix: Temporal Property guided Program Repair
