--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at the National University of Singapore (NUS),
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>. A recurrent focus of the group is software testing and analysis 
-		technology to enable autonomous security. 
+		methods to enable autonomous security. 
 		His research group is known for contributions to automated program repair and fuzz testing, which have been 
 		honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
 		the research team have been placed in various institutions as academics including UCL, Max Planck Inst., UniMelb and Concordia U. He has served the 
