--- a/papers.html
+++ b/papers.html
@@ -8,7 +8,7 @@
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[APR24]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> APR Competition 2024
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Program Repair Competition 2024
 		( <a href="./pdf/APRCOMP.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ridwan Shariffdeen, Yannic Noller, Martin Mirchev, Haifeng Ruan
 Xiang Gao, Andreea Costea, Gregory J Duck, Abhik Roychoudhury
