--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<li>
 		<font face="Arial">
 		<a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting</a> (Jan 25) on Trusted Automatic Programming
-	        to bring community together.
+	        to bring community together.<br>
 			
 		</font>
 		<br>
