--- a/index.html
+++ b/index.html
@@ -104,11 +104,15 @@
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>. 
 		His research group is known for contributions to automatic programming and automated program repair, as well as to
-		fuzzing and symbolic execution. These have been honored with various awards including an ICSE Most Influential Paper Award (10 year Test-of-time award) for program repair. Past doctoral students from 
-		the research team have been placed in various institutions as academics including UCL, Max Planck Inst., UniMelb and Concordia U. He has served the 
+		fuzzing and symbolic execution. These have been honored with various awards including an 
+		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
+		(10 year Test-of-time award) for program repair. Past doctoral students from 
+		the research team have been placed in various institutions as academics including Max Planck Institute, University College London, University of Melbourne and Concordia U. 
+		He has served the 
 		software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. Currently, he serves as
-		the chair of the steering committee of FSE. Abhik received his PhD from State University of New York at Stony Brook in 2000. 
+		the chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>. 
+		Abhik received his PhD in Computer Science from <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000. 
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
