--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 	&nbsp;</p>
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at the National University of Singapore (NUS),
+	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
+		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
 	        Trustworthy and Secure Software (TSS)</a>. 
 		His research group is known for contributions to automatic programming and automated program repair, as well as to
