--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
 		fuzzing and symbolic execution. These have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(10 year Test-of-time award) for program repair. Past doctoral students from 
-		the research team have been placed in various institutions as academics including Max Planck Institute, University College London, University of Melbourne and Concordia U. 
-		He has served the 
-		software engineering research community in various capacities including as chair of the major conferences of the field, 
+		the research team have been placed in many institutions as academics including 
+		<a href="https://mboehme.github.io/">Max Planck Institute</a>, <a href="https://mechtaev.com/">University College London</a> and 
+		<a href="https://thuanpv.github.io/">University of Melbourne</a>.
+		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. Currently, he serves as
 		the chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>. 
 		Abhik received his PhD in Computer Science from <a href="https://www.cs.stonybrook.edu/">State University of New York at Stony Brook</a> in 2000. 
