--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
 		His research group is known for contributions to automatic programming and automated program repair, as well as to
 		fuzzing and symbolic execution. These have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(10 year Test-of-time award) for program repair. Past doctoral students from 
-		the research team have been placed in many institutions as academics including 
+		(10 year Test-of-time award) for program repair. Doctoral students graduated fom his 
+		research team today work in many academic institutions including 
 		<a href="https://mboehme.github.io/">Max Planck Institute</a>, <a href="https://mechtaev.com/">University College London</a> and 
-		<a href="https://thuanpv.github.io/">University of Melbourne</a>.
+		<a href="https://thuanpv.github.io/">University of Melbourne</a>, 
+		<a href="https://www.shinhwei.com/">Concordia University</a> and 
+		<a href="https://www.comp.nus.edu.sg/~vivy/">NUS</a>. 
 		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. Currently, he serves as
 		the chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>. 
