--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		fuzzing and symbolic execution. These have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(10 year Test-of-time award) for program repair. Doctoral students graduated fom his 
-		research team today work in many academic institutions including 
+		research team have taken up faculty positions in many academic institutions including 
 		<a href="https://mboehme.github.io/">Max Planck Institute</a>, <a href="https://mechtaev.com/">University College London</a> and 
 		<a href="https://thuanpv.github.io/">University of Melbourne</a>, 
 		<a href="https://www.shinhwei.com/">Concordia University</a> and 
