--- a/index.html
+++ b/index.html
@@ -69,18 +69,17 @@
 		<font face="Arial">
 		Research program on <a href = "https://nus-tss.github.io/fuzzing/">
 	        Fuzz testing </a> (2023-27) launched under Cybersecurity Agency (CSA).
-			<br>
+			<br><br>
 		
 	
 		<li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 		<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27) in progress.
-		</p><br>
+		<br><br>
 
 		<li>
 		Co-chairing <a href ="https://conf.researchr.org/track/icse-2024/icse-2024-research-track#Call-for-papers">
-		Intl. Conf. on Software Engineering (ICSE) 24</a>, see you all in Lisbon!
+		Intl. Conf. on Software Engineering (ICSE) 24</a>, Lisbon, Portugal, April 2024.
 			
 			</font></p>
 	</ul>
