--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		His research group is known for contributions to automatic programming and automated program repair, as well as to
 		fuzzing and symbolic execution. These have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">Intl Conf on Software Engineering (ICSE) Most Influential Paper Award</a> 
-		(10 year Test-of-time award) for program repair. Doctoral students graduated fom his 
+		(Test-of-time award) for program repair. Doctoral students graduated fom his 
 		research team have taken up faculty positions in many academic institutions including 
 		<a href="https://mboehme.github.io/">Max Planck Institute</a>,
 		<a href="https://mechtaev.com/">University College London</a>,
