--- a/papers.html
+++ b/papers.html
@@ -11,7 +11,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[FSE24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> ProveNFix: Temporal Property guided Program Repair
-		(<a href="./pdf/FSE24.pdf">PDF</a>), <a href="./pdf/asplos24_wolff_dylan_lightning.mp4">90 sec Video</a>)</b></p>
+		(<a href="./pdf/FSE24.pdf">PDF</a>), <a href="./pdf/asplos24_wolff_dylan_lightning.mp4">90 sec Lightning Video</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yahui Song, Xiang Gao, Wenhua Li, Wei Ngan Chin, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> ACM International Conference on the Foundations of Software 
 		Engineering (FSE) 2024. </p> 
