--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
+        <li> [8 Apr 2024] <i> <b><a href =" https://github.com/nus-apr/auto-code-rover">AutoCodeRover </a></b>, 
+		our autonomous software engineer to fix GitHub issues in SWE-bench</i>, <a href ="https://arxiv.org/abs/2404.05427"> arxiv PDF</a>.
+
+	</li>
+
+		
 		<li>
 		<font face="Arial">
 		<a href="https://shonan.nii.ac.jp/seminars/217/">Shonan Meeting</a> (Jan 25) on Trusted Automatic Programming
