--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		[8 Apr 2024] <i> <b><a href =" https://github.com/nus-apr/auto-code-rover">AutoCodeRover </a></b>, 
-		our autonomous software engineer to fix GitHub issues in SWE-bench</i>, <a href ="https://arxiv.org/abs/2404.05427"> arxiv PDF</a>.<br>
+		[8 Apr 2024] <i> <b><a href =" https://github.com/nus-apr/auto-code-rover">AutoCodeRover </a></b></i>, 
+		our autonomous software engineer to fix GitHub issues</i>, <a href ="https://arxiv.org/abs/2404.05427"> arxiv PDF</a>.<br>
 	</font>
 	<br>
 
