--- a/papers.html
+++ b/papers.html
@@ -9,7 +9,7 @@
  <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv24]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> AutoCodeRover: Autonomous Program Improvement
-		(<a href="https://arxiv.org/abs/2404.05427"> pre-print</a>, <a href="https://github.com/nus-apr/auto-code-rover"> tool </a>)</b></p>
+		(<a href="https://arxiv.org/abs/2404.05427">Pre-print</a>, <a href="https://github.com/nus-apr/auto-code-rover"><i>GitHub</i> </a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Haifeng Ruan, Zhiyu Fan, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"> arXiv:2404.05427, Publicly released 8th April 2024. </p> 
 	 
