--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<ul>
         <li> <font face="Arial">
 		[8 Apr 2024] <i> <b><a href ="https://github.com/nus-apr/auto-code-rover">AutoCodeRover</a></b></i>, 
-		autonomous software engineer to fix GitHub issues</i>, <a href ="https://arxiv.org/abs/2404.05427"> arxiv</a>.<br>
+		autonomous software engineer to fix GitHub issues</i>, <a href ="https://arxiv.org/abs/2404.05427"><i>arxiv</i></a>.<br>
 	</font>
 	<br>
 
