--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         <li> <font face="Arial">
-		[<i> <b><a href ="https://github.com/nus-apr/auto-code-rover">AutoCodeRover</a></b></i>, 
+		<i> <b><a href ="https://github.com/nus-apr/auto-code-rover">AutoCodeRover</a></b></i>, 
 		autonomous software engineer to fix GitHub issues</i>,
-		<a href ="https://arxiv.org/abs/2404.05427"><i><b>arxiv</b></i>,
-		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515"><i><b>Announcement</a></b></i>.<br>
+		<a href ="https://arxiv.org/abs/2404.05427"><i><b>arxiv</b></i>, 
+		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515"><i>Announcement</i></a>.<br>
 	</font>
 	<br>
 
