--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <li> <font face="Arial">
 		<i> <b><a href ="https://github.com/nus-apr/auto-code-rover">AutoCodeRover</a></b></i>, 
 		autonomous software engineer to fix GitHub issues</i>,
-		<a href ="https://arxiv.org/abs/2404.05427"><i><b>arxiv</b></i>, 
-		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515"><i>Announcement</i></a>.<br>
+		<a href ="https://arxiv.org/abs/2404.05427"><b>arxiv</b>, 
+		<a href = "https://twitter.com/AbhikRoychoudh1/status/1777494000611852515">Announcement</a>.<br>
 	</font>
 	<br>
 
