--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 	</font></b>
 <br>
 
+	   <p> 	 		 	
+		<img border="0" src="abhik-pictures/ICSE2024.JPG" width="480" height="360"></p>
+
 <a href = "https://conf.researchr.org/home/icse-2024"><b>ICSE 2024</b></a>, 
 the 46th International Conference on Software Engineering, was held in Lisbon in April 2024 after about 
 three years of discussions and planning led by Abhik and Margaret-Anne Storey. ~1050 submissions, 
