--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 the 46th International Conference on Software Engineering, was held in Lisbon in April 2024 after about 
 three years of discussions and planning led by Abhik and Margaret-Anne Storey. ~1000+ submissions, 
 234 accepted papers, ~225 PC members, 12 area chairs spanning software engineering. 
-Thanks to the software engineering community!
+Thanks to the software engineering community!</p>
 		   
-<img border="0" src="abhik-pictures/ICSE24.JPG" width="480" height="360"></p>
+<img border="0" src="abhik-pictures/ICSE24.JPG" width="480" height="360">
 	   <p>
 <i>ICSE2024 involved major changes for the first time, major revisions of papers, and submissions of papers in multiple cycles 
 spanning an entire year.</i></p>
